# claude_mcp

./: .gitignore  claude_mcp.py  pyproject.toml  requirements.txt  server.py  test_auth.py
adapter/: __init__.py  directory_api.py  google_apis.py  weather_adapter.py
adapter/calendar/: __init__.py  auth.py  events.py  queries.py
adapter/common/: __init__.py  auth.py
adapter/contacts/: __init__.py  directory_api.py  fallback.py  resolution.py
adapter/weather/: __init__.py  alerts.py  client.py  forecast.py
secrets/: fallback-contacts.json
tools/: calendar_tools.py  time_tools.py  weather.py
tools/calendar/: __init__.py  create_event.py  delete_event.py  find_and_delete_event.py  find_and_update_event.py  list_events.py  smart_create_event.py  update_event.py
tools/contacts/: __init__.py  add_contact.py  add_name_alias.py  delete_contact.py  edit_contact.py  list_contacts.py  list_name_aliases.py  search_person.py  select_contact.py
tools/time/: __init__.py  get_current_date.py  get_current_time.py  get_timezone.py
tools/weather/: __init__.py  get_alerts.py  get_forecast.py
